# devpipe

./: .gitignore  AGENTS.md  README.md  acquiring.devpipe.yaml  mise.toml  pyproject.toml
.devpipe/: config.yaml
.devpipe/profiles/current-delivery/: pipeline.yml
config/: namespace-map.yaml  runners.yaml
docs/superpowers/plans/: 2026-03-27-profile-driven-pipelines.md  2026-03-27-textual-ui-migration.md
examples/acquiring/.devpipe/: config.yaml
roles/architect/: output.schema.json  role.yaml
roles/developer/: output.schema.json  prompt.md  role.yaml
roles/qa_local/: output.schema.json  role.yaml
roles/qa_stand/: output.schema.json  prompt.md  role.yaml
roles/release/: output.schema.json  prompt.md  role.yaml
roles/test_developer/: output.schema.json  role.yaml
src/devpipe/: __main__.py  app.py  bindings.py  cli.py  history.py  project_config.py  tags.py  tui.py
src/devpipe/integrations/: git.py  github.py  jira.py  kubernetes.py  namespace_map.py
src/devpipe/profiles/: __init__.py  loader.py  routing.py  stages.py
src/devpipe/roles/: envelope.py  loader.py  parser.py
src/devpipe/runners/: base.py  claude.py  codex.py  mock.py  profile_map.py
src/devpipe/runtime/: engine.py  events.py  retry.py  routing.py  state.py  transitions.py
tags/exchange_buy/: QA_STAND_PARAMS.yaml  QA_STAND_RULES.md  tag.yaml
tags/go/: TEST_DEVELOPER_RULES.md
tests/: conftest.py  test_cli.py  test_history.py
tests/e2e/: test_full_pipeline.py  test_profile_routing.py
tests/integrations/: test_github.py  test_jira.py  test_kubernetes.py  test_namespace_map.py
tests/profiles/: test_loader.py  test_routing.py  test_stages.py
tests/roles/: test_loader.py  test_parser.py
tests/runners/: test_base_runner.py  test_claude_runner.py  test_codex_runner.py  test_live_runners.py  test_profile_map.py
tests/runtime/: test_retry.py  test_state_machine.py
tests/stages/: test_bindings.py
tests/ui/: __init__.py  test_actions.py  test_app.py  test_config_screen.py  test_detail_panel.py  test_history_screen.py  test_run_screen.py  test_services.py  test_state.py
(+39 files in other folders)
